# utility

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: abs.hpp  format_container.hpp  format_ranges.hpp  gcd.hpp  is_bool.hpp  rng.hpp  rng_coro.hpp  roll_dice.hpp  sqrt.hpp  sqrt_newton.hpp  thread_pool.hpp  timer.hpp
src/: main.cpp
tests/: CMakeLists.txt  rng_unittest.cpp  thread_pool_unittest.cpp
tests/benchmark/: CMakeLists.txt  gcd_bm.cpp  sqrt_newton_bm.cpp
tests/unit/: CMakeLists.txt  roll_dice_unittest.cpp  sqrt_newton_unittest.cpp
tests/unit_test/: CMakeLists.txt  gcd_unittest.cpp  rng_coro_unittest.cpp  rng_unittest.cpp  roll_dice_unittest.cpp  sqrt_newton_unittest.cpp  thread_pool_unittest.cpp
unit-tests/: CMakeLists.txt  gcd_unittest.cpp  rng_coro_unittest.cpp  rng_unittest.cpp  roll_dice.cpp  sqrt_newton.cpp  sqrt_newton_unittest.cpp  thread_pool_unittest.cpp
